fixed fuatured div gaps and paddings

--- a/styles/breads-types.css
+++ b/styles/breads-types.css
@@ -1,16 +1,16 @@
-.featured__block{
-    padding: 70px 0 60px;
+.featured__block {
+    padding: 90px 90px;
 }
 
-.our-bread__block{
-    padding: 70px 0 60px;
+.our-bread__block {
+    padding: 90px 90px;
 }
 
-.our-bread__block .type__description{
+.our-bread__block .type__description {
     color: var(our-bread-text-description);
 }
 
-.featured__title{
+.featured__title {
     font-family: 'Prata', serif;
     font-size: 36px;
     font-weight: lighter; 
@@ -18,7 +18,7 @@
     padding-bottom: 40px;
 }
 
-.featured__types{
+.featured__types {
     display: grid;
     grid-template-columns: 1fr;
     gap: 30px;
@@ -30,7 +30,7 @@
     gap: 10px;
 }
 
-.type__image{
+.type__image {
     width: 100%;
     object-fit: cover;
     background-color: transparent!important;
@@ -38,7 +38,7 @@
     object-position: 50% 50%;
 }
 
-.type__title{
+.type__title {
     font-family: 'Prata', serif;
     font-size: 22px;
     line-height: 1.3;
@@ -46,22 +46,39 @@
     padding: 20px 0 20px 0;
 }
 
-.type__description{
+.type__description {
     font-family: 'Lato', sans-serif;
     color: var(--text-description-accent); 
-   font-size: 17px;
-   line-height: 1.5;
-   text-align: justify;
+    font-size: 17px;
+    line-height: 1.5;
+    text-align: justify;
+    hyphens: auto;
 }
 
-@media (min-width: 768px){
-    .featured__types{
+@media (min-width: 768px) {
+    .featured__block {
+        padding: 90px 95px;
+    }
+    
+    .our-bread__block {
+        padding: 90px 95px;
+    }
+    
+    .featured__types {
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media (min-width: 992px){
-    .featured__types{
+@media (min-width: 992px) {
+    .featured__block {
+        padding: 90px 100px;
+    }
+    
+    .our-bread__block {
+        padding: 90px 100px;
+    }
+    
+    .featured__types {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
